2013-04-04  Mario Pulido <mario.pulido@artica.es>

	* extensions/update_manager/main.php: Fixed information bug and
	added help tip in offline packages loader

2013-04-04  Mario Pulido <mario.pulido@artica.es>	

	* include/help/en/help_recontask.php,
        include/help/es/help_recontask.php: Updated help

2013-04-04  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_inventory_tab.php: Updated help.

	* include/help/ja/help_categories.php: Added a new help file.

2013-04-03  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/alert_actions.php: Fixed that any groups are shown
	to all users even if user has no permission to access the group.

2013-04-03  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: Removed an unnecessary
	modification, because 'talert_compound' is obsolete.

2013-04-02  Dario Rodriguez <dario@artica.es>

	* include/functions_api.php: New function to create a tag
	via API.
	* include/functions_tags.php: Create tag only if not exists.

2013-04-02  Mario Pulido <mario.pulido@artica.es> 

	* include/help/en/help_inventory_tab.php,
	include/help/es/help_inventory_tab.php: Changes in help of inventory.

2013-04-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/include/style/main.css: improved the style of view module
	list.

2013-04-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/agents.php, mobile/include/style/main.css:
	improved the view of list of agents.

2013-04-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/groups.php, mobile/include/style/main.css,
	include/functions_ui.php, include/functions_groups.php: change the
	skin of list groups.

2013-04-02  Mario Pulido <mario.pulido@artica.es>     

	* godmode/category/category.php,
       include/help/en/help_categories.php,
       include/help/es/help_categories.php: Added help in categories menu

