@@ -1,3 +1,13 @@
+2013-04-04 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/graphs/functions_flot.php, operation/agentes/stat_win.php:
+	cleaned source code style.
+	
+	* mobile/include/ui.class.php, mobile/include/style/main.css,
+	mobile/index.php, mobile/operation/module_graph.php,
+	mobile/operation/modules.php: more changes for the mobile in the
+	view of graph module.
+
 2013-04-04  Mario Pulido <mario.pulido@artica.es>
 
 	* extensions/update_manager/main.php: Fixed information bug and
